# GrapheryRFCs

./: 404.html  LICENSE  Pipfile  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
RFCs/: guidelines.md  index.md  introduction.md
RFCs/backend/: env_list.md  introduction.md
RFCs/backend/api/: introduction.md
RFCs/backend/api/graphql/: introduction.md  queries.md
RFCs/backend/data_bridge/: base.md  introduction.md
RFCs/backend/database/: introduction.md  mixins.md
RFCs/backend/database/tutorial_related_tables/: introduction.md
RFCs/backend/database/user_system/: user_table.md
RFCs/backend/executor/: implementation.md  introduction.md  variables.md
RFCs/backend/executor/local/: API.md
RFCs/backend/executor/server/: API.md
RFCs/backend/executor_server/: API.md  variables.md
RFCs/frontend/event-bus/: introduction.md  workflows.md
backend/api/graphql/introduction/: index.html
backend/api/introduction/: index.html
backend/data_bridge/base/: index.html
backend/data_bridge/introduction/: index.html
backend/database/introduction/: index.html
backend/database/mixins/: index.html
backend/env_list/: index.html
backend/executor/implementation/: index.html
backend/executor/introduction/: index.html
backend/executor/variables/: index.html
backend/introduction/: index.html
frontend/event-bus/introduction/: index.html
frontend/event-bus/workflows/: index.html
frontend/introduction/: index.html
guidelines/: index.html
introduction/: index.html
search/: search_index.json
tutorials/introduction/: index.html
(+34 files in other folders)
