[tool.poetry]
name = "grapheryrfcs"
version = "0.0.1"
description = ""
authors = ["Larry Zeng <graphery@reed.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^8.3.9"
pymdown-extensions = "^9.5"
Pygments = "^2.12.0"


[build-system]
requires = ["poetry-core>=1.1.0b2"]
build-backend = "poetry.core.masonry.api"
